--- a/css/rocket.css
+++ b/css/rocket.css
@@ -1,3 +1,7 @@
+body{
+  font-family: 'helvetica', sans-serif;
+}
+
 .left{
   background-color: #F08080;
   position: fixed;
@@ -5,6 +9,26 @@
   height: 100%;
   top: 0;
   left: 0;
+}
+
+.interface{
+  text-align: center;
+  padding: 20px;
+}
+
+a.button{
+  display: inline-block;
+  background-color: white;
+  color:black;
+  padding: 20px 40px;
+  text-decoration: none;
+  border-radius: 10px;
+  text-transform: uppercase;
+  transition: color 300ms;
+}
+
+a:hover{
+  color: salmon;
 }
 
 .right{
@@ -17,22 +41,40 @@
 }
 
 .ground{
-  background-color: green;
+  background-image: url('../img/neptune.png');
+  background-repeat: no-repeat;
   position: absolute;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-  height: 20px;
+  bottom: -120px;
+  left: 50%;
+  width: 256px;
+  height: 256px;
+  margin-left: -125px;
 }
 
 .rocket{
   position: absolute;
   left: 50%;
-  bottom: 20px;
-  width: 20px;
-  height: 100px;
-  background-color: blue;
+  bottom: 80px;
+  width: 143px;
+  height: 272px;
+  margin-left: -71.5px;
+  background: url('../img/rocket-state1.png') no-repeat 0 0;
   transition: bottom 10000ms;
+}
+
+/* rocket bg image*/
+body.body-state2 .rocket{
+  background-image: url('../img/rocket-state2.gif');
+}
+body.body-state3 .rocket,
+body.body-state4 .rocket{
+  background-image: url('../img/rocket-state3.gif');
+}
+body.body-state5 .rocket{
+  background-image: url('../img/boom.png');
+  width: 209px;
+  height: 200px;
+  margin-left: -104.5px;
 }
 
 body.body-state1 .rocket{
